--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,6 +12,7 @@
   type={paper},
   pdf={https://arxiv.org/pdf/2402.02887},
   video={https://www.youtube.com/watch?v=fUIk8LSpByw},
+  cited_by={Harvard, University of Cambridge, Google DeepMind, Stanford, Chinese Academy of Sciences},
 }
 
 @article{kurzendorfer2024audio,
@@ -25,7 +26,7 @@
   google_scholar_id={WF5omc3nYNoC},
   pdf={https://arxiv.org/pdf/2404.06309},
   code={https://github.com/dkurzend/ClipClap-GZSL},
-  github_repo={dkurzend/ClipClap-GZSL}
+  github_repo={dkurzend/ClipClap-GZSL},
 }
 
 @article{nowak2024towards,
@@ -53,7 +54,8 @@ google_scholar_id={YsMSGLbcyi4C},
 pdf={https://arxiv.org/pdf/2309.15086},
 video={https://bmvc2022.mpi-inf.mpg.de/BMVC2023/0581_video.mp4},
 code={https://github.com/ExplainableML/ReGaDa},
-github_repo={ExplainableML/ReGaDa}
+github_repo={ExplainableML/ReGaDa},
+cited_by={University of Edinburgh},
 }
 
 
@@ -68,7 +70,8 @@ github_repo={ExplainableML/ReGaDa}
   google_scholar_id={W7OEmFMy1HYC},
   pdf={https://arxiv.org/pdf/2309.03869},
   code={https://github.com/ExplainableML/AVDIFF-GFSL},
-  github_repo={ExplainableML/AVDIFF-GFSL}
+  github_repo={ExplainableML/AVDIFF-GFSL},
+  cited_by={Technical University of Munich, Chinese Academy of Sciences},
 }
 
 @article{renz2022plant,
@@ -83,7 +86,8 @@ github_repo={ExplainableML/ReGaDa}
   pdf={https://arxiv.org/pdf/2210.14222},
   video={https://www.youtube.com/watch?v=_sNNEyjMmaY},
   code={https://github.com/autonomousvision/plant},
-  github_repo={autonomousvision/plant}
+  github_repo={autonomousvision/plant},
+  cited_by={University of Oxford, Harvard, Google, Stanford, Nvidia},
 }
 
 @article{mercea2022audio,
@@ -97,7 +101,8 @@ github_repo={ExplainableML/ReGaDa}
   google_scholar_id={u-x6o8ySG0sC},
   pdf={https://arxiv.org/pdf/2203.03598},
   code={https://github.com/ExplainableML/AVCA-GZSL},
-  github_repo={ExplainableML/AVCA-GZSL}
+  github_repo={ExplainableML/AVCA-GZSL},
+  cited_by={Google Research, Carnegie Mellon University, Amazon, Mila, Cornell University},
 }
 
 @article{mercea2022temporal,
@@ -111,7 +116,8 @@ github_repo={ExplainableML/ReGaDa}
   google_scholar_id={d1gkVwhDpl0C},
   pdf={https://arxiv.org/pdf/2207.09966},
   code={https://github.com/ExplainableML/TCAF-GZSL},
-  github_repo={ExplainableML/TCAF-GZSL}
+  github_repo={ExplainableML/TCAF-GZSL},
+  cited_by={Carnegie Mellon University, Amazon, Australian National University, Technical University of Munich, Tsinghua University},
 }
 
 @misc{todoran2023system,
