--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,13 +12,14 @@
   type={paper},
   pdf={https://arxiv.org/pdf/2402.02887},
   video={https://www.youtube.com/watch?v=fUIk8LSpByw},
+  location={Seattle, USA},
   cited_by={Harvard, University of Cambridge, Google DeepMind, Stanford, Chinese Academy of Sciences},
 }
 
 @article{kurzendorfer2024audio,
   title={Audio-Visual Generalized Zero-Shot Learning using Pre-Trained Large Multi-Modal Models},
   author={Kurzend{\"o}rfer*, David and Mercea*, Otniel-Bogdan and Koepke, A and Akata, Zeynep},
-  note={CVPRw},
+  note={CVPRW},
   selected={false},
   year={2024},
   preview={clip_clap.png},
@@ -26,6 +27,7 @@
   google_scholar_id={WF5omc3nYNoC},
   pdf={https://arxiv.org/pdf/2404.06309},
   code={https://github.com/dkurzend/ClipClap-GZSL},
+  location={Seattle, USA},
   github_repo={dkurzend/ClipClap-GZSL},
 }
 
@@ -55,6 +57,7 @@ pdf={https://arxiv.org/pdf/2309.15086},
 video={https://bmvc2022.mpi-inf.mpg.de/BMVC2023/0581_video.mp4},
 code={https://github.com/ExplainableML/ReGaDa},
 github_repo={ExplainableML/ReGaDa},
+location={Aberdeen, UK},
 cited_by={University of Edinburgh},
 }
 
@@ -71,6 +74,7 @@ cited_by={University of Edinburgh},
   pdf={https://arxiv.org/pdf/2309.03869},
   code={https://github.com/ExplainableML/AVDIFF-GFSL},
   github_repo={ExplainableML/AVDIFF-GFSL},
+  location={Heidelberg, Germany},
   cited_by={Technical University of Munich, Chinese Academy of Sciences},
 }
 
@@ -87,22 +91,8 @@ cited_by={University of Edinburgh},
   video={https://www.youtube.com/watch?v=_sNNEyjMmaY},
   code={https://github.com/autonomousvision/plant},
   github_repo={autonomousvision/plant},
+  location={Auckland, New Zealand},
   cited_by={University of Oxford, Harvard, Google, Stanford, Nvidia},
-}
-
-@article{mercea2022audio,
-  title={Audio-visual generalised zero-shot learning with cross-modal attention and language},
-  author={Mercea, Otniel-Bogdan and Riesch, Lukas and Koepke, A and Akata, Zeynep},
-  note={CVPR},
-  selected={true},
-  year={2022},
-  preview={avca.png},
-  type={paper}, 
-  google_scholar_id={u-x6o8ySG0sC},
-  pdf={https://arxiv.org/pdf/2203.03598},
-  code={https://github.com/ExplainableML/AVCA-GZSL},
-  github_repo={ExplainableML/AVCA-GZSL},
-  cited_by={Google Research, Carnegie Mellon University, Amazon, Mila, Cornell University},
 }
 
 @article{mercea2022temporal,
@@ -117,7 +107,24 @@ cited_by={University of Edinburgh},
   pdf={https://arxiv.org/pdf/2207.09966},
   code={https://github.com/ExplainableML/TCAF-GZSL},
   github_repo={ExplainableML/TCAF-GZSL},
+  location={Tel Aviv, Israel},
   cited_by={Carnegie Mellon University, Amazon, Australian National University, Technical University of Munich, Tsinghua University},
+}
+
+@article{mercea2022audio,
+  title={Audio-visual generalised zero-shot learning with cross-modal attention and language},
+  author={Mercea, Otniel-Bogdan and Riesch, Lukas and Koepke, A and Akata, Zeynep},
+  note={CVPR},
+  selected={true},
+  year={2022},
+  preview={avca.png},
+  type={paper}, 
+  google_scholar_id={u-x6o8ySG0sC},
+  pdf={https://arxiv.org/pdf/2203.03598},
+  code={https://github.com/ExplainableML/AVCA-GZSL},
+  github_repo={ExplainableML/AVCA-GZSL},
+  location={New Orleans, USA},
+  cited_by={Google Research, Carnegie Mellon University, Amazon, Mila, Cornell University},
 }
 
 @misc{todoran2023system,
