--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -29,6 +29,7 @@
   code={https://github.com/dkurzend/ClipClap-GZSL},
   location={Seattle, USA},
   github_repo={dkurzend/ClipClap-GZSL},
+  cited_by={Tsinghua University}
 }
 
 @article{nowak2024towards,
