--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -20,7 +20,7 @@
   title={Audio-Visual Generalized Zero-Shot Learning using Pre-Trained Large Multi-Modal Models},
   author={Kurzend{\"o}rfer*, David and Mercea*, Otniel-Bogdan and Koepke, A and Akata, Zeynep},
   note={CVPRW},
-  selected={false},
+  selected={true},
   year={2024},
   preview={clip_clap.png},
   type={paper},
