--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 @article{mercea2024time,
   title={Time-Memory-and Parameter-Efficient Visual Adaptation},
   author={Mercea, Otniel-Bogdan and Gritsenko, Alexey and Schmid, Cordelia and Arnab, Anurag},
-  note={SPOTLIGHT @ CVPR},
+  note={HIGHLIGHT @ CVPR},
   selected={true},
   year={2024},
   preview={losa.png},
